# rentseeker

dev-server/: Cargo.toml
dev-server/src/: main.rs
frontend/: .dockerignore  Dockerfile  TODO.md  deploy.sh  deploy.yml  package-lock.json  package.json
frontend/pages/: _app.tsx  _document.tsx  index.tsx
frontend/pages/houses/: [uuid].tsx
frontend/src/: AnnotatedSlider.tsx  AppContainer.tsx  AutoInput.tsx  HouseFetchService.tsx  HouseUploadService.tsx  PersistenceService.tsx  Selector.tsx  SignInForm.tsx  Slider.tsx  app_styles.tsx  models.ts  store.ts  styles.tsx  useAuthenticatedRequester.ts  utilities.ts
frontend/src/redux/: reducer.ts
server/: Cargo.toml  Dockerfile  Rocket.toml  deploy.sh  deploy.yml  house.json  house2.json  jwt.txt  login_wrong.json  signup.json
server/src/: main.rs
