[package]
name = "server"
version = "0.1.0"
authors = ["Marcus Buffett <marcusbuffett@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
# rocket = { git = "https://github.com/timokoesters/Rocket.git", branch = "empty_parameters", features = ["tls"] }
sled = "0.34"
rocket_contrib = "*"
serde = { version = "*", features = ["derive"] }
bincode = "*"
anyhow = "*"
serde_json = "*"
rust-argon2 = "0.8"
sha2 = "*"
hmac = "*"
jsonwebtoken = "7"
chrono = "*"
thiserror = "*"
sled-extensions = { version = "*", features = ["bincode"]}
